--- a/style.css
+++ b/style.css
@@ -10,75 +10,75 @@ body {
 }
 
 .roboto-thin {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .roboto-light {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 .roboto-regular {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .roboto-medium {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .roboto-bold {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .roboto-black {
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
 }
 
 .roboto-thin-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: italic;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
 }
 
 .roboto-light-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-style: italic;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
 }
 
 .roboto-regular-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: italic;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
 }
 
 .roboto-medium-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: italic;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
 }
 
 .roboto-bold-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-style: italic;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
 }
 
 .roboto-black-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-style: italic;
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
 }
 
 .page01 {
@@ -180,7 +180,8 @@ nav {
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: #f8f8f8;
+        /*background-color: #f8f8f8;*/
+        background-color: #e1f96c;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -269,8 +270,8 @@ h1 {
     font-weight: 200;
     margin-top: 0.8em;
     margin-bottom: 0.8em;
-    animation: 1.2s slideIn ease-in-out forwards 0s;
     font-size: 3.4em;
+    animation: 1.2s slideIn ease-in-out forwards 0s;
 }
 
 
@@ -278,6 +279,7 @@ h2 {
     font-size: 3.3em;
     text-align: center;
     font-weight: 100;
+    animation: 1.3s slideIn ease-in-out forwards 0s;
 }
 
 
@@ -285,6 +287,36 @@ h3 {
     font-size: 2.8em;
     text-align: center;
 }
+
+span {
+    position: relative;
+}
+
+span::before {
+    transform: scaleX(0);
+    transform-origin: bottom right;
+}
+
+span:hover::before {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+span::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    inset: 0 0 0 0;
+    background: #ddf953;
+    z-index: -1;
+    transition: transform 0.3s ease;
+}
+
+
 
 h4 {
     font-size: 1.6em;
@@ -297,8 +329,15 @@ p {
     font-size: 1.3em;
     text-align: center;
     font-weight: 10;
-
+    animation: 1.3s slideIn ease-in-out forwards 0s;
 }
+
+hr {
+    animation-duration: 3s;
+    animation: 1.2s slideIn ease-in-out forwards 0s;
+}
+
+
 
 a {
     text-decoration: none;
@@ -329,6 +368,12 @@ footer {
     justify-content: center;
 }
 
+
+
+.page04card a {
+    --clr: #3d3d3d;
+    
+}
 
 
 
@@ -459,6 +504,7 @@ footer {
     border-radius: 20px;
     transition: 0.5s;
     box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+    animation: 1.3s slideIn ease-in-out forwards 0s;
 }
 
 .page04container .page04card:hover {
@@ -576,7 +622,7 @@ footer {
 
 .page04Btn:hover {
     background-color: rgb(199, 199, 199, 0.3);
-  
+
     box-shadow: 3px 4.9px 16px rgb(199, 199, 199, 0.3);
     letter-spacing: 5px;
     transition: 0.6s;
@@ -635,6 +681,7 @@ hr {
     animation: 0.2s slideIn ease-in-out forwards 0.1s;
     color: #009dff;
 
+
 }
 
 
@@ -647,7 +694,6 @@ hr {
 
 
     transition: 0.2s;
-    transform: translateY(-0.15em);
 
 }
 
@@ -657,6 +703,7 @@ hr {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    animation: 1.3s slideIn ease-in-out forwards 0s;
 
 }
 
@@ -682,9 +729,10 @@ hr {
     max-width: 100%;
     height: 140px;
     transition: 0.5s;
-    animation: 1.2s slideIn ease-in-out forwards 0s;
+
 
 }
+
 
 
 .page06cardinner1,
@@ -708,7 +756,7 @@ hr {
     border-left: 6px solid #009dff;
 }
 
-.page06cardinner2 {   
+.page06cardinner2 {
     border-left: 6px solid #009dff;
 }
 
@@ -721,11 +769,11 @@ hr {
 
 /*page06_SVG*/
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 40
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 40
 }
 
 
